fix(about): fix overlapping text with the animation

--- a/src/styles/partials/about.less
+++ b/src/styles/partials/about.less
@@ -64,6 +64,10 @@
 
 				@media(min-width: 940px) {
 					padding: 0 40% 0 20px;
+
+					@media(max-width: 1150px) {
+						padding: 0 50% 0 20px;
+					}
 				}
 			}
 			
